@@ -1,12 +1,14 @@
 Package: kinship
-Version: 1.1.0-3
-Date: 2004-9-6
+Version: 1.1.0-4
+Date: 2004-12-21
 Title: mixed-effects Cox models, sparse matrices, and modeling data from large pedigrees
 Author: Beth Atkinson (atkinson@mayo.edu) for pedigree
         functions. Terry Therneau (therneau@mayo.edu) for all other functions.
 Maintainer: Jing hua Zhao <j.zhao@ucl.ac.uk>
 Depends: survival, nlme, lattice
-SaveImage: yes
+SaveImage: No
+LazyLoad: Yes
+LazyData: Yes
 Description: coxme: general mixed-effects Cox models; kinship: routines
         to create and manipulate n by n matrices that describe the
         genetic relationships between n persons; pedigree: create and
@@ -25,4 +27,4 @@ License: Copyright 2003 Mayo Foundation for Medical Education and
         For other licensing arrangements, please contact Terry
         Therneau, Ph.D. Division of Biostatistics Mayo Clinic
         200 First St., SW Rochester, MN 55905 email: therneau@mayo.edu
-Packaged: Mon Sep  6 14:29:29 2004; jzhao
+Packaged: Tue Dec 21 11:58:24 2004; jzhao
